# SC-LoRA

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
docs/assets/css/: style.css
sc_lora/: __init__.py  config.py  controllers.py  data.py  data_format.py  evaluation.py  figures.py  hooks.py  lora.py  losses.py  model_source.py  pipeline.py  prototypes.py  replay.py  sae.py  taxonomy.py  training.py  utils.py
